@@ -27,6 +27,7 @@ import bibliothek.gui.dock.common.intern.CDockable;
 import bibliothek.gui.dock.common.mode.ExtendedMode;
 import bibliothek.gui.dock.common.theme.ThemeMap;
 import bibliothek.gui.dock.common.theme.eclipse.CommonEclipseThemeConnector;
+import bibliothek.gui.dock.control.DockableSelector;
 import bibliothek.gui.dock.station.screen.BoundaryRestriction;
 import bibliothek.gui.dock.util.ConfiguredBackgroundPanel;
 import bibliothek.gui.dock.util.DirectWindowProvider;
@@ -122,6 +123,7 @@ import org.weasis.core.api.gui.util.AppProperties;
 import org.weasis.core.api.gui.util.DynamicMenu;
 import org.weasis.core.api.gui.util.GuiExecutor;
 import org.weasis.core.api.gui.util.GuiUtils;
+import org.weasis.core.api.gui.util.ShortcutManager;
 import org.weasis.core.api.gui.util.WinUtil;
 import org.weasis.core.api.media.data.Codec;
 import org.weasis.core.api.media.data.MediaElement;
@@ -136,14 +138,18 @@ import org.weasis.core.api.util.ResourceUtil;
 import org.weasis.core.api.util.ResourceUtil.ActionIcon;
 import org.weasis.core.api.util.ResourceUtil.LogoIcon;
 import org.weasis.core.ui.docking.DockableTool;
+import org.weasis.core.ui.editor.ExternalDisplay;
+import org.weasis.core.ui.editor.MediaFactory;
 import org.weasis.core.ui.editor.MimeSystemAppViewer;
 import org.weasis.core.ui.editor.SeriesViewer;
 import org.weasis.core.ui.editor.SeriesViewerFactory;
 import org.weasis.core.ui.editor.SeriesViewerUI;
+import org.weasis.core.ui.editor.TabFocusPolicy;
+import org.weasis.core.ui.editor.ViewerOpenOptions;
+import org.weasis.core.ui.editor.ViewerPlacement;
 import org.weasis.core.ui.editor.ViewerPluginBuilder;
 import org.weasis.core.ui.editor.image.ImageViewerPlugin;
 import org.weasis.core.ui.editor.image.SequenceHandler;
-import org.weasis.core.ui.editor.image.ViewCanvas;
 import org.weasis.core.ui.editor.image.ViewerPlugin;
 import org.weasis.core.ui.launcher.Launcher;
 import org.weasis.core.ui.launcher.Launcher.Type;
@@ -153,7 +159,6 @@ import org.weasis.core.ui.util.ColorLayerUI;
 import org.weasis.core.ui.util.DefaultAction;
 import org.weasis.core.ui.util.ToolBarContainer;
 import org.weasis.core.ui.util.Toolbar;
-import org.weasis.core.util.LangUtil;
 import org.weasis.core.util.StringUtil;
 import org.weasis.core.util.StringUtil.Suffix;
 
@@ -364,6 +369,21 @@ public class WeasisWin {
       DockUtilities.disableCheckLayoutLocked();
     }
     CControl control = GuiUtils.getUICore().getDockingControl();
+    applyDockingShortcuts(control);
+    // Keep CControl in sync when the user customises shortcuts
+    ShortcutManager.getInstance()
+        .addPropertyChangeListener(
+            evt -> {
+              if (ShortcutManager.PROPERTY_SHORTCUTS_CHANGED.equals(evt.getPropertyName())) {
+                Object newVal = evt.getNewValue();
+                if (newVal == null
+                    || (newVal instanceof ShortcutManager.ShortcutEntry entry
+                        && entry.getId().startsWith("docking."))) { // NON-NLS
+                  applyDockingShortcuts(control);
+                }
+              }
+            });
+
     control.setRootWindow(new DirectWindowProvider(frame));
     destroyOnClose(control);
     ThemeMap themes = control.getThemes();
@@ -412,15 +432,12 @@ public class WeasisWin {
     SeriesViewerFactory factory = builder.getFactory();
     DataExplorerModel model = builder.getModel();
     List<MediaSeries<MediaElement>> seriesList = builder.getSeries();
-    Map<String, Object> props = builder.getProperties();
+    ViewerOpenOptions opts = builder.getViewerOpenOptions();
+    ViewerPlacement placement = opts.placement();
+    TabFocusPolicy focusPolicy = opts.tabFocusPolicy();
 
-    Rectangle screenBound = (Rectangle) props.get(ViewerPluginBuilder.SCREEN_BOUND);
-    boolean setInSelection =
-        LangUtil.nullToFalse((Boolean) props.get(ViewerPluginBuilder.OPEN_IN_SELECTION));
-
-    if (screenBound == null && group != null) {
-      boolean bestDefaultLayout =
-          LangUtil.nullToTrue((Boolean) props.get(ViewerPluginBuilder.BEST_DEF_LAYOUT));
+    // -- ReuseViewer: try to reuse an existing viewer matching the same group --
+    if (placement instanceof ViewerPlacement.ReuseViewer reuse && group != null) {
       List<ViewerPlugin<?>> viewerPlugins = GuiUtils.getUICore().getViewerPlugins();
       synchronized (viewerPlugins) {
         for (int i = viewerPlugins.size() - 1; i >= 0; i--) {
@@ -433,49 +450,35 @@ public class WeasisWin {
           if (p instanceof ImageViewerPlugin viewer
               && p.getName().equals(factory.getUIName())
               && group.equals(p.getGroupID())) {
-            if (setInSelection && seriesList.size() == 1) {
-              viewer.addSeries(seriesList.get(0));
+            if (reuse.openInSelection() && seriesList.size() == 1) {
+              viewer.addSeries(seriesList.getFirst());
             } else {
-              viewer.addSeriesList(seriesList, bestDefaultLayout);
+              viewer.addSeriesList(seriesList, reuse.bestDefaultLayout());
             }
-            viewer.setSelectedAndGetFocus();
+            if (focusPolicy.shouldBringToFront()) {
+              viewer.setSelectedAndGetFocus();
+            }
             return;
           }
         }
       }
     }
-    // Pass the DataExplorerModel to the viewer
-    props.put(DataExplorerModel.class.getName(), model);
-    if (seriesList.size() > 1) {
-      props.put(ViewCanvas.class.getName(), seriesList.size());
-    }
-    SeriesViewer<?> seriesViewer = factory.createSeriesViewer(props);
+
+    // -- No existing viewer found or non-reuse strategy: create a new viewer --
+    ViewerOpenOptions factoryOpts =
+        seriesList.size() > 1 ? opts.withSeriesCount(seriesList.size()) : opts;
+    SeriesViewer<?> seriesViewer = factory.createSeriesViewer(factoryOpts, model);
     if (seriesViewer instanceof MimeSystemAppViewer) {
       for (MediaSeries m : seriesList) {
         seriesViewer.addSeries(m);
       }
     } else if (seriesViewer instanceof ViewerPlugin<?> viewer) {
-      String title;
       if (factory.canExternalizeSeries()) {
         GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
         GraphicsDevice[] gd = ge.getScreenDevices();
         if (gd.length > 1) {
           viewer.getDockable().setExternalizable(true);
           setExternalPosition(viewer.getDockable());
-          // viewer.getDockable().addCDockableLocationListener(new CDockableLocationListener() {
-          //
-          // @Override
-          // public void changed(CDockableLocationEvent event) {
-          // // TODO not a good condition
-          // if (event.getNewLocation() instanceof CExternalizedLocation
-          // && !(event.getOldLocation() instanceof CExternalizedLocation)) {
-          // CDockable dockable = event.getDockable();
-          // if (dockable instanceof DefaultSingleCDockable) {
-          // setExternalPosition((DefaultSingleCDockable) dockable);
-          // }
-          // }
-          // }
-          // });
         }
       }
       if (group == null
@@ -486,35 +489,46 @@ public class WeasisWin {
         group = treeModel.getParent(s, model.getTreeModelNodeForNewPlugin());
       }
       if (group != null) {
-        title = group.toString();
+        String title = group.toString();
         viewer.setGroupID(group);
         viewer.getDockable().setTitleToolTip(title);
         viewer.setPluginName(StringUtil.getTruncatedString(title, 25, Suffix.THREE_PTS));
       }
 
       // Override default plugin icon
-      Object val = props.get(ViewerPluginBuilder.ICON);
-      if (val instanceof Icon icon) {
-        viewer.getDockable().setTitleIcon(icon);
+      Icon pluginIcon = opts.icon();
+      if (pluginIcon != null) {
+        viewer.getDockable().setTitleIcon(pluginIcon);
       }
 
+      // Apply placement-specific configuration
+      boolean openInSelection = false;
       boolean registered;
-      if (screenBound != null) {
-        registered = registerDetachWindow(viewer, screenBound);
+      if (placement instanceof ViewerPlacement.External ext) {
+        registered = registerDetachWindow(viewer, ext.externalDisplay(), opts);
       } else {
-        registered = registerPlugin(viewer);
+        if (placement instanceof ViewerPlacement.ReuseViewer reuse) {
+          openInSelection = reuse.openInSelection();
+        }
+        registered = registerPlugin(viewer, opts);
       }
+
       if (registered) {
-        viewer.setSelectedAndGetFocus();
+        boolean bringToFront = focusPolicy.shouldBringToFront();
+        if (bringToFront) {
+          viewer.setSelectedAndGetFocus();
+        }
         if (seriesViewer instanceof ImageViewerPlugin) {
-          if (!setInSelection) {
+          if (!openInSelection) {
             ((ImageViewerPlugin) viewer).selectLayoutPositionForAddingSeries(seriesList);
           }
         }
         for (MediaSeries m : seriesList) {
           viewer.addSeries(m);
         }
-        viewer.setSelected(true);
+        if (bringToFront) {
+          viewer.setSelected(true);
+        }
       } else {
         viewer.close();
         viewer.handleFocusAfterClosing();
@@ -525,34 +539,19 @@ public class WeasisWin {
   private void setExternalPosition(final DefaultSingleCDockable dockable) {
     // TODO should be set dynamically. Maximize button of external window does not support
     // multi-screens.
-    Toolkit toolkit = Toolkit.getDefaultToolkit();
-    GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
-    GraphicsDevice[] gd = ge.getScreenDevices();
-    if (gd.length > 1) {
-      Rectangle bound = WinUtil.getClosedScreenBound(rootPaneContainer.getRootPane().getBounds());
-      if (bound == null) {
-        return;
-      }
-      for (GraphicsDevice graphicsDevice : gd) {
-        GraphicsConfiguration config = graphicsDevice.getDefaultConfiguration();
-        final Rectangle b = config.getBounds();
-        if (!b.contains(bound)) {
-          Insets inset = toolkit.getScreenInsets(config);
-          b.x += inset.left;
-          b.y += inset.top;
-          b.width -= (inset.left + inset.right);
-          b.height -= (inset.top + inset.bottom);
-          dockable.setDefaultLocation(
-              ExtendedMode.EXTERNALIZED,
-              CLocation.external(b.x, b.y, b.width - 150, b.height - 150));
-          break;
-        }
-      }
+    ExternalDisplay otherScreen =
+        ExternalDisplay.onOtherScreen(rootPaneContainer.getRootPane().getBounds());
+    if (otherScreen != null) {
+      Rectangle b = otherScreen.screenBounds();
+      dockable.setDefaultLocation(
+          ExtendedMode.EXTERNALIZED, CLocation.external(b.x, b.y, b.width - 150, b.height - 150));
     }
   }
 
-  private static boolean registerDetachWindow(final ViewerPlugin plugin, Rectangle screenBound) {
-    if (plugin != null && screenBound != null) {
+  private static boolean registerDetachWindow(
+      final ViewerPlugin plugin, ExternalDisplay extDisplay, ViewerOpenOptions opts) {
+    if (plugin != null && extDisplay != null) {
+      Rectangle screenBound = extDisplay.screenBounds();
       ViewerPlugin oldWin = null;
       List<ViewerPlugin<?>> viewerPlugins = GuiUtils.getUICore().getViewerPlugins();
       synchronized (viewerPlugins) {
@@ -576,7 +575,7 @@ public class WeasisWin {
         dock.setLocation(
             CLocation.external(
                 screenBound.x, screenBound.y, screenBound.width - 150, screenBound.height - 150));
-        plugin.showDockable();
+        plugin.showDockable(opts);
         GuiExecutor.execute(
             () -> {
               if (dock.isVisible()) {
@@ -596,7 +595,7 @@ public class WeasisWin {
           Rectangle b2 = parent.getBounds();
           b2.setLocation(parent.getLocationOnScreen());
           dock.setLocation(CLocation.external(b2.x, b2.y, b2.width, b2.height).stack());
-          plugin.showDockable();
+          plugin.showDockable(opts);
         }
       }
       return true;
@@ -604,12 +603,49 @@ public class WeasisWin {
     return false;
   }
 
-  public boolean registerPlugin(final ViewerPlugin plugin) {
+  /**
+   * Reads the docking-tab shortcuts from {@link ShortcutManager} and pushes them into the given
+   * {@link CControl}. Call once at startup and again whenever shortcuts are modified.
+   */
+  private static void applyDockingShortcuts(CControl control) {
+    ShortcutManager sm = ShortcutManager.getInstance();
+    control.putProperty(
+        CControl.KEY_MAXIMIZE_CHANGE,
+        KeyStroke.getKeyStroke(
+            sm.getKeyCode(ShortcutManager.ID_DOCKING_MAXIMIZE),
+            sm.getModifier(ShortcutManager.ID_DOCKING_MAXIMIZE)));
+    control.putProperty(
+        CControl.KEY_GOTO_EXTERNALIZED,
+        KeyStroke.getKeyStroke(
+            sm.getKeyCode(ShortcutManager.ID_DOCKING_EXTERNALIZE),
+            sm.getModifier(ShortcutManager.ID_DOCKING_EXTERNALIZE)));
+    control.putProperty(
+        CControl.KEY_GOTO_NORMALIZED,
+        KeyStroke.getKeyStroke(
+            sm.getKeyCode(ShortcutManager.ID_DOCKING_NORMALIZE),
+            sm.getModifier(ShortcutManager.ID_DOCKING_NORMALIZE)));
+    control.putProperty(
+        CControl.KEY_CLOSE,
+        KeyStroke.getKeyStroke(
+            sm.getKeyCode(ShortcutManager.ID_DOCKING_CLOSE),
+            sm.getModifier(ShortcutManager.ID_DOCKING_CLOSE)));
+    control.putProperty(
+        DockableSelector.INIT_SELECTION,
+        KeyStroke.getKeyStroke(
+            sm.getKeyCode(ShortcutManager.ID_DOCKING_PANEL_LIST),
+            sm.getModifier(ShortcutManager.ID_DOCKING_PANEL_LIST)));
+  }
+
+  public boolean registerPlugin(ViewerPlugin plugin, ViewerOpenOptions opts) {
     if (plugin == null || GuiUtils.getUICore().getViewerPlugins().contains(plugin)) {
       return false;
     }
-    plugin.showDockable();
+    plugin.showDockable(opts);
     return true;
+  }
+
+  public boolean registerPlugin(ViewerPlugin plugin) {
+    return registerPlugin(plugin, ViewerOpenOptions.defaults());
   }
 
   public synchronized ViewerPlugin getSelectedPlugin() {
@@ -749,7 +785,15 @@ public class WeasisWin {
 
     final JMenuItem webMenuItem = new JMenuItem(Messages.getString("WeasisWin.shortcuts"));
     webMenuItem.addActionListener(
-        e -> openBrowser(webMenuItem, preferences.getProperty("weasis.help.shortcuts")));
+        _ -> {
+          try {
+            Path htmlFile =
+                ShortcutManager.getInstance().writeHtmlToTempFile(AppProperties.APP_TEMP_DIR);
+            GuiUtils.openInDefaultBrowser(webMenuItem, htmlFile.toUri());
+          } catch (IOException ex) {
+            LOGGER.error("Cannot generate shortcuts page", ex);
+          }
+        });
     helpMenuItem.add(webMenuItem);
 
     final JMenuItem websiteMenuItem =
@@ -1183,12 +1227,15 @@ public class WeasisWin {
     private void openWithFactory(Series<?> seq, SeriesViewerFactory factory) {
       DataExplorerModel model = (DataExplorerModel) seq.getTagValue(TagW.ExplorerModel);
       if (model instanceof TreeModel treeModel) {
-        ViewerPluginBuilder builder = new ViewerPluginBuilder(factory, List.of(seq), model, null);
+        ViewerPluginBuilder builder =
+            new ViewerPluginBuilder(factory, List.of(seq), model, ViewerOpenOptions.defaults());
         openSeriesInViewerPlugin(
             builder, treeModel.getParent(seq, model.getTreeModelNodeForNewPlugin()));
       } else {
-        ViewerPluginBuilder.openSequenceInDefaultPlugin(
-            seq, model == null ? ViewerPluginBuilder.DefaultDataModel : model, true, true);
+        ViewerPluginBuilder.openInDefaultViewer(
+            seq,
+            model == null ? ViewerPluginBuilder.DefaultDataModel : model,
+            ViewerOpenOptions.defaults());
       }
     }
 
@@ -1225,7 +1272,7 @@ public class WeasisWin {
     }
 
     private void categorizeMediaFile(Path file, Map<Codec, List<Path>> codecFiles) {
-      MediaReader reader = ViewerPluginBuilder.getMedia(file, false);
+      MediaReader reader = MediaFactory.getMedia(file, false);
       if (reader != null) {
         Codec codec = reader.getCodec();
         if (codec != null) {
@@ -1248,7 +1295,8 @@ public class WeasisWin {
             findCompatibleExplorers(explorers, entry.getKey());
 
         if (compatibleExplorers.isEmpty()) {
-          files.forEach(file -> ViewerPluginBuilder.openSequenceInDefaultPlugin(file, true, true));
+          files.forEach(
+              file -> ViewerPluginBuilder.openInDefaultViewer(file, ViewerOpenOptions.defaults()));
         } else {
           importInExplorer(compatibleExplorers, files, null);
         }
